feat(catalog): qualify Qwen2.5 Coder Q4 hybrid RAG